--- a/src/app/chat/components/messenger-tools/messenger-tools.component.html
+++ b/src/app/chat/components/messenger-tools/messenger-tools.component.html
@@ -1,4 +1,4 @@
-<div class="inform" *ngIf="deal" >
+<div class="inform" *ngIf="collocutorData" >
   <div class="tools"
   *ngIf="canDealBePayed || canDealBeStarted || isCancelButton || isArbiterBtn || isFinishDealButton"
   >
@@ -9,7 +9,7 @@
     <button *ngIf="isArbiterBtn" (click)="callArbiter()">обратиться в арбитраж</button>
     <button *ngIf="isFinishDealButton" (click)="finishWork()" >Завершить работу</button>
   </div>
-  <div class="timer" *ngIf="deal.workStarted === 1 && deal.moneyHolden !==0 && deal.dealDone !== 1">
+  <div class="timer" *ngIf="collocutorData.workStarted === 1 && collocutorData.moneyHolden !==0 && collocutorData.dealDone !== 1">
     <h6>Кол-во дней до завершения заказа</h6>
     <div class="clock">
       <div> <span>{{ thousand }}</span> </div>
@@ -18,28 +18,28 @@
       <div> <span>{{ singleNum }}</span> </div>
     </div>
   </div>
-  <div class="package {{ deal.package }}">
-    <h6 class="title">{{ 'chat.work_chat.deal_info.packageType_' + deal.package  | translate }}</h6>
+  <div class="package {{ collocutorData.package }}">
+    <h6 class="title">{{ 'chat.work_chat.deal_info.packageType_' + collocutorData.package  | translate }}</h6>
     <p class="price">{{packagePrice}} UAH</p>
 
-    <p class="subtitle">{{  deal.offers_title }}</p>
+    <p class="subtitle">{{  collocutorData.offers_title }}</p>
     <div class="main-info">
-      <p><span>Кол-во правок: </span><span>{{ deal.changes}}</span></p>
-      <p><span>Срок исполнения: </span><span>{{ deal.term }} дней</span></p>
+      <p><span>Кол-во правок: </span><span>{{ collocutorData.changes}}</span></p>
+      <p><span>Срок исполнения: </span><span>{{ collocutorData.term }} дней</span></p>
     </div>
     <div class="extra-features">
       <p>Коммерческое использование</p>
-      <ng-container *ngIf="deal.extra_features && deal.extra_features.length > 0">
-        <p *ngFor="let el of deal.extra_features">{{ el.title }}</p>
+      <ng-container *ngIf="collocutorData.extra_features && collocutorData.extra_features.length > 0">
+        <p *ngFor="let el of collocutorData.extra_features">{{ el.title }}</p>
       </ng-container>
       
     </div>
   </div>
 
-  <div class="history" *ngIf="deal.brief !== 0 && deal.brief !== '0'">
+  <div class="history" *ngIf="collocutorData.brief !== 0 && collocutorData.brief !== '0'">
     <h6 class="history-title">История</h6>
     <div class="history-items">
-      <div class="history-item" *ngFor="let el of deal.history" >
+      <div class="history-item" *ngFor="let el of collocutorData.history" >
         <div class="logo-icon">
           <img [src]="'/assets/images/icons/deals-icons/' + el.answer + '.png'" alt="system-icon">
         </div>
