--- a/src/app/chat/components/messenger-tools/messenger-tools.component.scss
+++ b/src/app/chat/components/messenger-tools/messenger-tools.component.scss
@@ -2,7 +2,7 @@
   border-radius: 4px;
   background-color: #f4f7fc;
   height: 100%;
-  padding: 45px 0 25px;
+  padding: 25px 0 ;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
