--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/notifications-user-settings/notifications-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/notifications-user-settings/notifications-user-settings.component.scss
@@ -1,23 +1,12 @@
 .inform_section{
   // border-bottom: 1px solid #EBEEFF;
   &__title{
-    width: 31%;
+    // width: 31%;
     box-sizing: border-box;
-    padding: 50px 30px;
+    // padding: 50px 30px;
     border-bottom: 1px solid #EBEEFF;
-    h3{
-      margin: 0;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 143%;
-      text-transform: uppercase;
-      color: #323C47;
-    }
   }
   &__fields{
-    padding: 50px 0;
-    width: 69%;
     border-bottom: 1px solid #EBEEFF;
   }
   form{
@@ -150,25 +139,4 @@ input[type=checkbox].tgl-classic + label{
 
 .form-butons{
   margin: 0 auto;
-}
-.save-all{
-  font-family: "Source Sans Pro", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 1px;
-
-  color: #FFFFFF;
-  background: #3C7EEA;
-  box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
-  border-radius: 4px;
-  border: none;
-  margin: 30px auto 20px;
-  padding: 17px 35px 15px;
-  text-transform: uppercase;
-
 }
