--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -491,3 +491,50 @@
     }
   }
 }
+
+@media (max-width: 1499px) {
+  .main-statistic {
+    display: flex;
+    justify-content: space-between;
+    padding: 22px 22px 18px 15px;
+    box-sizing: border-box;
+    width: 100%;
+    &>* {
+      font-family: Source Sans Pro, sans-serif;
+    }
+  
+    &>div {
+      box-sizing: border-box;
+      padding: 13px 15px;
+      background: #FFFFFF;
+      box-shadow: 0px 4px 20px rgba(173, 182, 217, 0.17);
+      border-radius: 10px;
+      display: flex;
+      min-width: 256px;
+      align-items: center;
+      .icon {
+        width: 30px;
+        height: 30px;
+        margin-right: 18px;
+      }
+  
+      p {
+        margin: 0;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 14px;
+        color: #323C47;
+          
+        &:last-of-type {
+          font-size: 14px;
+          line-height: 14px;
+          color: #33596E;
+          opacity: 0.5;
+          font-style: normal;
+          font-weight: normal;
+          margin-top: 8px;
+        }
+      }
+    }
+  }
+}
