--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.scss
@@ -1,32 +1,3 @@
-.inform_section{
-  display: flex;
-  border-bottom: 1px solid #EBEEFF;
-  &__title{
-    padding: 50px 30px;
-    width: 25%;
-    h3{
-      margin: 0;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 143%;
-      text-transform: uppercase;
-      color: #323C47;
-    }
-  }
-  &__fields{
-    padding: 50px 0;
-    width: 75%;
-  }
-}
-
-.inputs-wrapper{
-  max-width: 630px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .block-title{
   font-family: 'Source Sans Pro';
   font-style: normal;
@@ -75,7 +46,6 @@
   }
 }
 .field-block-multiple{
-  max-width: 630px;
   position: relative;
   .field-block{
     margin-bottom: 25px;
@@ -371,28 +341,26 @@ button {
 }
 
 @media (max-width: 1499px) {
-  .inform_section{
-    &__title{
-      padding: 40px 25px;
-    }
-    &__fields{
-      padding: 40px 0;
-    }
-  }
-  .field-block-multiple{
-    max-width: 510px;
-  }
-  .single-additional-education-block::after{
-    width: 100%;
-  }
-}
-@media (max-width: 1360px) {
-  .inform_section{
-    &__title{
-      width: 23%;
-    }
-    &__fields{
-      width: 77%;
+  .studyPeriod{
+    width: 490px;
+    .period-wrapper{
+      .field-block{
+        width: 105px;
+  
+        &:first-child{
+          margin-right: 22px;
+        }
+      }
     }
   }
 }
+// @media (max-width: 1360px) {
+//   .inform_section{
+//     &__title{
+//       width: 23%;
+//     }
+//     &__fields{
+//       width: 77%;
+//     }
+//   }
+// }
