--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.scss
@@ -1,22 +1,37 @@
-.inform_section{
-  display: flex;
-  &__title{
-    padding: 50px 30px;
-    width: 25%;
-    h3{
-      margin: 0;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 143%;
-      text-transform: uppercase;
-      color: #323C47;
+::ng-deep{
+  .inform_section{
+    display: flex;
+    border-bottom: 1px solid #EBEEFF;
+    &__title{
+      padding: 50px 30px;
+      width: 30%;
+      h3{
+        margin: 0;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 143%;
+        text-transform: uppercase;
+        color: #323C47;
+      }
+    }
+    &__fields{
+      padding: 50px 0;
+      width: 70%;
     }
   }
-  &__fields{
-    padding: 50px 0;
-    width: 75%;
+  .inputs-wrapper{
+    max-width: 630px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
+  .field-block-multiple{
+    max-width: 630px;
+  }
+} 
+
+.inform_section{
   form{
     width: 100%;
     display: flex;
@@ -220,16 +235,48 @@
   }
 }
 
-.save-all{
-  margin: 30px auto 20px;
-}
+// .save-all{
+//   margin: 30px auto 20px;
+// }
 
 @media (max-width: 1499px) {
-  .inform_section{
-    display: flex;
+  ::ng-deep{
+    .inform_section{
+      display: flex;
+      &__title{
+        padding: 40px 25px;
+        width: 27%;
+      }
+      &__fields{
+        padding: 40px 0;
+        width: 73%;
+      }
+    }
+    .inputs-wrapper{
+      max-width: 510px;
+    }
+    .field-block-multiple{
+      max-width: 510px;
+    } 
+    .single-education-block::after{
+      width: 100%;
+    }
+    .single-additional-education-block::after{
+      width: 100%;
+    }
+    .save-all{
+      margin: 20px auto 20px;
+    }
+  }
+}
+
+@media (max-width: 1360px) {
+  ::ng-deep .inform_section{
     &__title{
-      padding: 50px 30px;
-      width: 25%;
+      width: 23%;
+    }
+    &__fields{
+      width: 77%;
     }
   }
 }
