--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.scss
@@ -1,25 +1,3 @@
-.inform_section{
-  display: flex;
-  border-bottom: 1px solid #EBEEFF;
-  &__title{
-    padding: 50px 30px;
-    width: 25%;
-    h3{
-      margin: 0;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 143%;
-      text-transform: uppercase;
-      color: #323C47;
-    }
-  }
-  &__fields{
-    padding: 50px 0;
-    width: 75%;
-  }
-}
-
 .top-block{
   display: flex;
   max-width: 630px;
@@ -175,7 +153,7 @@
     line-height: 125%;
     color: #707683;
     padding: 15px;
-    box-sizing: border-box;
+    box-sizing: content-box;
     &::placeholder {
       opacity: .5;
     }
@@ -196,16 +174,6 @@
     max-width: 510px;
     margin-bottom: 10px;
   }
-  .inform_section{
-    &__title{
-      padding: 40px 25px;
-      width: 25%;
-    }
-    &__fields{
-      padding: 40px 0;
-      width: 75%;
-    }
-  }
   .gender-block{
     margin-bottom: 40px;
     .block-title{
@@ -222,13 +190,5 @@
     }
   }
 }
-@media (max-width: 1360px) {
-  .inform_section{
-    &__title{
-      width: 23%;
-    }
-    &__fields{
-      width: 77%;
-    }
-  }
-}
+// @media (max-width: 1360px) {
+// }
