--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-mail-user-settings/security-mail-user-settings.component.scss
@@ -1,30 +1,3 @@
-.inform_section{
-  // border-bottom: 1px solid #EBEEFF;
-  &__title{
-    width: 31%;
-    box-sizing: border-box;
-    padding: 50px 30px;
-    h3{
-      margin: 0;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 143%;
-      text-transform: uppercase;
-      color: #323C47;
-    }
-  }
-  &__fields{
-    padding: 40px 0 20px;
-    width: 69%;
-  }
-  form{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-
 .form-change-mail{
   display: flex;
   flex-wrap: wrap;
@@ -32,17 +5,9 @@
     width: 100%;
   }
 }
-
-.inputs-wrapper{
-  max-width: 630px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  input{
-    outline: none;
-  }
+.inform_section__fields{
+  padding-bottom: 0;
 }
-
 .new-passrord{
   & + .pass-erorrs {
     width: 100%;
@@ -187,38 +152,7 @@
 }
 
 
-.inputs-wrapper{
-  max-width: 630px;
-  position: relative;
-  .field-block{
-    margin-bottom: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
-  }
-}
-
 .form-butons{
   margin: 0 auto;
 }
-.save-all{
-  font-family: "Source Sans Pro", sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 1px;
 
-  color: #FFFFFF;
-  background: #3C7EEA;
-  box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
-  border-radius: 4px;
-  border: none;
-  margin: 0 auto 20px;
-  padding: 17px 35px 15px;
-  text-transform: uppercase;
-}
