--- a/src/app/chat/components/rate-deal/rate-deal.component.scss
+++ b/src/app/chat/components/rate-deal/rate-deal.component.scss
@@ -94,6 +94,34 @@
         display: block;
       }
     }
+
+    .rate-description {
+      position: absolute;
+      background: #FFFFFF;
+      box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
+      border-radius: 8px;
+      transform: matrix(1, 0, 0, -1, 0, 0);
+      transform: translateX(-49%);
+      width: max-content;
+      top: -60px;
+      padding: 8px 10px;
+
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      color: #323C47;
+      &:after {
+        position: absolute;
+        content: '';
+        width: 19px;
+        height: 19px;
+        background: #FFFFFF;        
+        bottom: -2px;
+        left: 50%;
+        transform: matrix(0.69, -0.57, -0.93, -0.68, 0, 0) translateX(-50%);
+      }
+    }
   }
   .comment {
     display: flex;
