--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -51,6 +51,7 @@
             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
           </mat-chip>
           <input [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
             [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)" [disabled]="tags.length === 5">
         </mat-chip-list>
       </mat-form-field>
