--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
@@ -340,3 +340,21 @@ ngb-popover-window {
     }
   }
 }
+
+@media (max-width: 1499px) {
+  .step-wrapper {
+    padding-right: 10px;
+    &>form {
+      width: 100%;
+    }
+  }
+  .form-butons {
+    button {
+      font-size: 13px;
+      padding: 10px 24px;
+      &:first-of-type{
+        padding: 10px 24px;
+      }
+    }
+  }
+}
