--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.scss
@@ -384,3 +384,22 @@ ngb-popover-window {
   //   top: -43px !important;
   // }
 }
+
+@media (max-width: 1499px) {
+  .step-wrapper > form{
+    width: 100%;
+  }
+    // ---------------------------file upload form ---------------------------
+  .items {
+    justify-content: flex-start;
+  }
+  .form-butons {
+    button {
+      font-size: 13px;
+      padding: 10px 24px;
+      &:first-of-type{
+        padding: 10px 24px;
+      }
+    }
+  }
+}
