--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.scss
@@ -260,3 +260,168 @@ form {
   }
 }
 }
+
+@media (max-width: 1499px) {
+  .wrapper {
+    padding: 25px 40px 25px 25px;
+    .steps {
+      width: 30%;
+      h3 {
+        margin-bottom: 22px;
+      }
+      .hideStepOne{
+        .step:first-child{
+          display: none;
+        }
+      }
+      .hideStepTwo{
+
+        .step:nth-child(-n+2){
+          display: none;
+        }
+      }
+      .step {
+        padding: 13px;
+        min-width: 230px;
+        h5 {
+          font-size: 16px;
+          line-height: 20px;
+          margin-bottom: 2px;
+        }
+        h4 {
+          font-size: 16px;
+          line-height: 20px;
+        }
+        p {
+          font-size: 14px;
+          line-height: 20px;
+        }  
+        .step-order {
+          position: absolute;
+          left: -42px;
+          top: 50%;
+          width: 26px;
+          height: 26px;
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 23px;
+        }
+        &:before {
+          content: "";
+          position: absolute;
+          width: 4px;
+          height: 60%;
+          left: -31px;
+          background: #e5e8ed;
+          border-radius: 2px;
+          top: -10%;
+  
+        }
+        &:after {
+          content: "";
+          position: absolute;
+          width: 4px;
+          height: 60%;
+          left: -31px;
+          background: #e5e8ed;
+          border-radius: 2px;
+          bottom: -10%;
+  
+        }
+        &:first-child:before {
+          top: 0;
+          height: 50%;
+        }
+        &:last-child:after {
+          bottom: 0;
+          height: 50%;
+        }
+        &.dev {
+          & > * {
+            opacity: 1;
+          }
+          cursor: pointer;
+          .step-order {
+            background: #659AF3;
+            color: #FFFFFF;
+            border: 3px solid #fff;
+            line-height: 20px;
+          }
+          &:before {
+            background: #AECCFF;
+          }
+        }
+        &.done {
+          & > * {
+            opacity: 1;
+          }
+          cursor: pointer;
+          .step-order {
+            background: #659AF3;
+            color: #FFFFFF;
+            border: 3px solid #fff;
+            line-height: 20px;
+            font-size: 0;
+            &:before {
+              position: absolute;
+              content: '\e901';
+              font-family: icoMoon;
+              font-family: icoMoon;
+              font-size: 7px;
+              color: #fff;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%);
+            }
+          }
+          &:before {
+            background: #AECCFF;
+          }
+          &:after {
+            background: #AECCFF;
+          }
+  
+          &:last-child() {
+            background: #C3CCF2;
+            
+          }
+        }
+      }
+    }
+    .step-detail {
+      width: 100%;
+      padding-left: 60px;
+      padding-bottom: 40px;
+    }
+  }
+}
+
+@media (max-width: 1360px) {
+  .wrapper {
+    padding: 20px 15px;
+    .steps {
+      width: 30%;
+      h3 {
+        margin-bottom: 15px;
+      }
+      .step {
+        padding: 17px 20px;
+        min-width: 225px;
+        h5 {
+          font-size: 14px;
+          line-height: 18px;
+          margin-bottom: 6px;
+        }
+        p {
+          font-size: 13px;
+          line-height: 18px;
+        }  
+      }
+      .step-detail {
+        width: 100%;
+        padding-left: 30px;
+        padding-bottom: 40px;
+      }
+    }
+  }
+}
