--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
@@ -105,6 +105,7 @@ section:not(.wrap) {
     img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
   }
   .offer-name {
@@ -322,5 +323,77 @@ mat-tab-group ::ng-deep {
   .mat-tab-label{
     opacity: 1;
   }
+
+}
+
+
+@media (max-width: 1499px) {
+  .add-service {
+    width: calc(25% - 40px);
+    max-height: 205px;
+    min-height: 205px;
+    margin: 0 20px;
+    i {
+      font-size: 20px;
+      margin-right: 5px;
+    }
+  }
+  .item {
+    width: calc(25% - 40px);
+    max-height: 210px;
+    min-height: 210px;
+    margin: 0 20px 50px;
+    .service-photo {
+      width: 100%;
+      height: 160px;
+      cursor: pointer;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .offer-name {
+      padding: 6px 22px 6px 8px;
+      position: relative;
+      min-height: auto;
+      box-sizing: content-box;
+      h6 {
+        font-size: 14px;
+        line-height: 18px;
+      }
+    }
+  }
+  mat-tab-group ::ng-deep {
+    .mat-tab-header {
+      margin: 0 15px;
+    }
+    .mat-tab-body-wrapper {
+      margin-top: 40px;
+    }
+    .mat-tab-body-content {
+      padding-right: 0;
+    }
+  }
+  .item-menu {
+    top: 7px;
+    right: -4px;
+    .menu {
+      height: auto;
+      right: 0;
+      top: 35px;
+      ul {
+        li {
+          padding: 10px 10px 10px 40px;
+          i {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1360px) {
 
 }
