--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.html
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.html
@@ -148,6 +148,10 @@
       <div class="btn-wrapper"> 
         <div class="btn-checkout btn-accept-checkout" type="submit" (click)="sendDealData()">Подтвердить заказ</div>
       </div>
+
+      <div class="info-subText">
+        <span>*Подтверждение заказа не является его оплатой.</span>
+      </div>
     </div>
   </div>
 </div>
